tests/good/binop/bool/boolcmp/greatthan.go
package main;
import "fmt";

func main(){
	fmt.Print(5>6)
	fmt.Print("\n")
}

/*
== Expected program output ==
false
*/