tests/bad/func/params/unknown_output_type.go
package main;

func f () s {
}

func main (){}


/*
== Expected compiler output ==
File "./tests/bad/func/params/unknown_output_type.go", line 3, characters 5-6:
error: In function f, output type s not well defined
*/